@@ -233,7 +233,7 @@
         id="savepoints"
         title="Savepoints"
         parent="transaction"
-        doc_path="savepoint.txt"
+        doc_path="tests/savepoint.txt"
         />
     <bookchapter
         id="doom"
